@@ -1,3 +1,7 @@
+TheMightyDude (05 August 2012)
+--------------------------------------
+Fixed Notice: Undefined index: pore, porganics, pgoods, penergy, pfighters and ptorp in planet.php
+
 TheMightyDude (03 August 2012)
 --------------------------------------
 Fixed bug in news.php where some dates wasn't working.
